# python-file

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.wex/: config.yml
.wex/python/app_manager/: requirements.txt
src/wexample_file/common/: abstract_local_item_path.py  local_directory.py  local_file.py
src/wexample_file/const/: globals.py
src/wexample_file/enum/: local_path_type.py
src/wexample_file/exception/: directory_not_found_exception.py  file_not_found_exception.py  not_a_directory_exception.py
src/wexample_file/excpetion/: directory_not_found_exception.py
src/wexample_file/helper/: line.py
src/wexample_file/mixin/: with_local_directory_mixin.py  with_local_file_mixin.py  with_path_mixin.py
tests/package/common/: test_local_directory.py  test_local_file.py
wexample_file/common/: abstract_local_item_path.py  local_directory.py  local_file.py
wexample_file/const/: globals.py  types.py
wexample_file/excpetion/: directory_not_found_exception.py  file_not_found_exception.py  local_path_not_found_exception.py  not_a_directory_exception.py  not_a_file_exception.py
wexample_file/helpers/: path.py
