[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wexample-file"
version = "0.0.3"
description = "Package that allows you to manage the state of files and directories using YAML configuration files."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pip-tools",
    "pydantic",
    "wexample-helpers",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-file"

[project.optional-dependencies]
dev = ["pytest"]
[tool.setuptools.packages.find]
include = [
    "*",
]
